# schedule_bot_dialog

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.example.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: setup.yml
bot/: __main__.py  config.py  main.py
bot/config/: config.py
bot/db/: __init__.py
bot/db/migrations/: env.py
bot/db/models/: __init__.py  group.py  lesson.py  schedule.py  user.py  week_type.py
bot/db/repositories/: group_interface.py  group_realization.py  lesson_interface.py  lesson_realization.py  schedule_interface.py  schedule_realization.py  user_interface.py  user_realization.py
bot/dialogs/main/: dialogs.py  getters.py  handlers.py
bot/fsm/: states.py
bot/handlers/: admin_comands.py  admin_commands.py  commands.py  user_handlers.py
bot/infrastructure/scheduler/: taskiq_broker.py  tasks.py
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/middlewares/: session.py  type_of_week.py  users.py
bot/utils/: db_connection.py  dialogs.py  i18n.py  main_menu.py
src/bot/: __main__.py
src/bot/db/: __init__.py
src/bot/db/migrations/versions/: 55a0a0861f2f_db.py
src/bot/db/models/: __init__.py  group.py  lesson.py
src/bot/db/repositories/: group_interface.py  group_realization.py  lesson_interface.py  schedule_realization.py  user_interface.py  user_realization.py
src/bot/dialogs/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/main/: getters.py  handlers.py
src/bot/fsm/: states.py
src/bot/handlers/: admin_commands.py  commands.py  other_handlers.py
src/bot/infrastructure/scheduler/: taskiq_broker.py  tasks.py
src/bot/locales/ru/: txt.ftl
src/bot/locales/ru/LC_MESSAGES/: txt.ftl
src/bot/middlewares/: i18n.py  session.py  users.py
src/bot/utils/: dialogs.py  i18n.py  main_menu.py
src/core/: config.py  database.py  logging.py
src/core/di/: ioc.py
src/core/di/providers/: __init__.py  bot.py  config.py  database.py  transaction_manager.py  user_repository.py  user_service.py
src/core/interfaces/: __init__.py  user_repository.py
src/core/interfaces/repositories/: __init__.py  transaction_manager.py  user_repository.py
src/core/interfaces/services/: user_service.py
src/models/: __init__.py  user.py
src/repositories/: __init__.py  transaction_manager.py  user_repository.py
src/services/: user_service.py
